@@ -18,6 +18,9 @@
 #' @param tumor.id.in.vcf Id of tumor in case multiple samples are stored in
 #' VCF.
 #' @param normal.id.in.vcf Id of normal in in VCF. Currently not used.
+#' @param min.logr.sdev Minimum log-ratio standard deviation used in the
+#' model. Useful to make fitting more robust to outliers in very clean
+#' data (currently not used in this segmentation function).
 #' @param prune.hclust.h Ignored in this function.
 #' @param prune.hclust.method Ignored in this function.
 #' @param changepoints.penality The \code{--number-of-changepoints-penalty-factor}.
@@ -59,7 +62,7 @@
 #' @export segmentationGATK4
 segmentationGATK4 <- function(normal, tumor, log.ratio, seg, 
     vcf = NULL, tumor.id.in.vcf = 1, normal.id.in.vcf = NULL,
-    prune.hclust.h = NULL, prune.hclust.method = NULL,
+    min.logr.sdev = 0.15, prune.hclust.h = NULL, prune.hclust.method = NULL,
     changepoints.penality = NULL, additional.cmd.args = "",
     chr.hash = NULL, ...) {
 
