@@ -17,6 +17,9 @@
 #' @param tumor.id.in.vcf Id of tumor in case multiple samples are stored in
 #' VCF.
 #' @param normal.id.in.vcf Id of normal in in VCF. Currently not used.
+#' @param min.logr.sdev Minimum log-ratio standard deviation used in the
+#' model. Useful to make fitting more robust to outliers in very clean
+#' data (currently not used in this segmentation function).
 #' @param prune.hclust.h Height in the \code{hclust} pruning step. Increasing
 #' this value will merge segments more aggressively. If NULL, try to find a
 #' sensible default.
@@ -50,7 +53,7 @@
 #' @export segmentationHclust
 segmentationHclust <- function(seg,
     vcf = NULL, tumor.id.in.vcf = 1, normal.id.in.vcf = NULL,
-    prune.hclust.h = NULL, prune.hclust.method = "ward.D",
+    min.logr.sdev = 0.15, prune.hclust.h = NULL, prune.hclust.method = "ward.D",
     chr.hash = NULL, ...) {
     if (is.null(seg)) {
         .stopUserError("segmentationHclust requires an input segmentation.")  
