@@ -18,6 +18,7 @@ segmentationCBS(
   tumor.id.in.vcf = 1,
   normal.id.in.vcf = NULL,
   max.segments = NULL,
+  min.logr.sdev = 0.15,
   prune.hclust.h = NULL,
   prune.hclust.method = "ward.D",
   chr.hash = NULL,
@@ -60,6 +61,10 @@ VCF.}
 
 \item{max.segments}{If not \code{NULL}, try a higher \code{undo.SD}
 parameter if number of segments exceeds the threshold.}
+
+\item{min.logr.sdev}{Minimum log-ratio standard deviation used in the
+model. Useful to make fitting more robust to outliers in very clean
+data (currently not used in this segmentation function).}
 
 \item{prune.hclust.h}{Height in the \code{hclust} pruning step. Increasing
 this value will merge segments more aggressively. If NULL, try to find a
