@@ -12,6 +12,7 @@ segmentationGATK4(
   vcf = NULL,
   tumor.id.in.vcf = 1,
   normal.id.in.vcf = NULL,
+  min.logr.sdev = 0.15,
   prune.hclust.h = NULL,
   prune.hclust.method = NULL,
   changepoints.penality = NULL,
@@ -38,6 +39,10 @@ ignores this user provided segmentation.}
 VCF.}
 
 \item{normal.id.in.vcf}{Id of normal in in VCF. Currently not used.}
+
+\item{min.logr.sdev}{Minimum log-ratio standard deviation used in the
+model. Useful to make fitting more robust to outliers in very clean
+data (currently not used in this segmentation function).}
 
 \item{prune.hclust.h}{Ignored in this function.}
 
