@@ -10,6 +10,9 @@ SIGNIFICANT USER-VISIBLE CHANGES
       sometimes exceeded the noise.
     o Added min.variants argument to runAbsoluteCN
     o Added PureCN version to runAbsoluteCN results object (ret$version)
+    o Do not attempt two-step segmentation in PSCBS when off-target noise is still
+      very small (< 0.15). Happens with super clean data and can lead to over-segmentation
+      due to other biases.
 
 BUGFIXES
 
